Introduction chapter and start context engineering chapter

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,11 +10,8 @@ book:
     - index.qmd
     - part: "Concepts"
       chapters:
-        - Introduction.ipynb
-        - summary.qmd
-        - references.qmd
-
-bibliography: references.bib
+        - introduction.ipynb
+        - context.ipynb
 
 format:
   html:
@@ -24,5 +21,4 @@ format:
   pdf:
     documentclass: scrreprt
 
-
-
+bibliography: references.bib
