add references to reflection chapter

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
         - introduction.ipynb
         - context.ipynb
         - reflection.ipynb
+        - planning.ipynb
 
 format:
   html:
